--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,7 +22,7 @@ title: Psyciatry in Action Lab's Knowledge Base
 email: psychiatryinaction@gmail.com
 description:  # this means to ignore newlines until "baseurl:"
   An awesome description for an awesome lab site
-baseurl: // # the subpath of your site, e.g. /blog
+baseurl: /psyact-knowledge-base/ # the subpath of your site, e.g. /blog
 url: psyact-lab.github.io # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: elonmusk
 github_username:  PsyAct-Lab
